Enhance UI components and optimize dark mode system
Streamlined the UI by removing unnecessary items, interfaces have been enhanced in AppBar component, SideDrawer, and Home page. Unused imports have also been eliminated in the affected components. The dark mode system implemented has been optimized, switching theme now utilizes classList for more efficient style changes. Other trivial changes include code alignment refinements and minor styling adjustments.

--- a/frontend/src/pages/editor/Editor.css
+++ b/frontend/src/pages/editor/Editor.css
@@ -1,16 +1,14 @@
 .editor-root {
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    width: 100%;
+    height: calc(100vh - 80px);
+    width: calc(100% - 32px);
 }
 
 .editor-container {
-    margin-top: var(--appbar-height);
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-
 }
 
 .editor-root.dark-mode {
