--- a/frontend/src/pages/dashboard/Dashboard.css
+++ b/frontend/src/pages/dashboard/Dashboard.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: calc(100vh - var(--appbar-height));
+    height: calc(100vh - 220px);
     width: 100%;
 }
 
