--- a/frontend/src/components/pagination/PaginationComponent.css
+++ b/frontend/src/components/pagination/PaginationComponent.css
@@ -1,22 +1,29 @@
 .pagination-root {
     display: flex;
-    justify-content: center;
     padding: var(--padding-small);
     margin-top: var(--margin-large);
+    position: absolute;
+    bottom: 0;
+    right: 50%;
+    transform: translateX(50%);
 }
 
 .pagination-item {
-    color: var(--default-color);
-    transition: background-color var(--transition), color var(--transition);
-    border-radius: var(--border-radius);
-    margin: 0 var(--margin-small);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+    transition: transform 0.3s ease;
 }
 
 .pagination-item:hover {
     background-color: var(--hover-bg-color);
     color: var(--hover-text-color);
     transform: scale(1.05);
-    box-shadow: var(--box-shadow-hover);
 }
 
 .pagination-item-selected {
@@ -26,8 +33,7 @@
 }
 
 .light-mode .pagination-item {
-    color: var(--text-color-light);
-
+    color: var(--primary-color-light);
 }
 
 .light-mode .pagination-item:hover {
@@ -35,8 +41,9 @@
     color: var(--hover-text-color);
 }
 
+/* Dark Mode */
 .dark-mode .pagination-item {
-    color: var(--text-color-dark);
+    color: var(--primary-color-dark);
 }
 
 .dark-mode .pagination-item:hover {
@@ -44,6 +51,10 @@
     color: var(--hover-text-color-dark);
 }
 
+.dark-mode .pagination-item {
+    color: var(--text-color-dark);
+}
+
 .dark-mode .pagination-item-selected {
-    color: var(--primary-color-dark);
+    color: var(--text-color-dark);
 }
