--- a/frontend/src/pages/dashboard/Dashboard.css
+++ b/frontend/src/pages/dashboard/Dashboard.css
@@ -1,10 +1,9 @@
 .dashboard-container {
-    margin-top: calc(var(--appbar-height) + 15px);
+    margin-top: calc(var(--appbar-height));
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: calc(100vh - 220px);
     width: 100%;
 }
 
@@ -14,6 +13,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+
 }
 
 .charts-grid {
@@ -37,4 +37,11 @@
 
 .dark-mode .chart-card:hover {
     box-shadow: 0 10px 30px -5px rgba(255, 255, 255, 0.3);
+}
+
+.create-button-fab {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 100;
 }
