--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,19 +8,34 @@
     --info-color: #2196f3;
     --success-color: rgba(18, 211, 26, 0.56);
 
-    /* Light Mode */
-    --background-color-light: #ffffff;
-    --navbar-bg-color-light: #333;
-    --sidebar-bg-color-light: #444;
-    --primary-color-light: #0275d8;
-    --text-color-light: #333;
+    /* Allgemeine Variablen */
+    --z-index-appbar: 1000;
+    --button-padding: 10px 20px;
+    --button-border: none;
+    --transform-button-active: scale(0.98);
+    --outline-button-focus: 2px solid var(--accent-color);
+    --outline-offset: 2px;
+    --box-shadow-focus: 0 0 0 2px rgba(0, 0, 0, 0.2);
 
-    /* Dark Mode */
+    /* Light Mode spezifische Variablen */
+    --primary-color-light: #0275d8;
+    --background-color-light: #ffffff;
+    --text-color-light: #1c1c1c;
+    --input-border-light: 1px solid #cccccc;
+    --input-padding-light: 10px;
+    --navbar-bg-color-light: #ffffff;
+    --sidebar-bg-color-light: #ffffff;
+
+
+    /* Dark Mode spezifische Variablen */
+    --primary-color-dark: #025aa5;
     --background-color-dark: #333333;
-    --navbar-bg-color-dark: #444444;
-    --sidebar-bg-color-dark: #555555;
-    --primary-color-dark: #002541;
     --text-color-dark: #ffffff;
+    --input-border-dark: 1px solid #888888;
+    --input-padding-dark: 10px;
+    --navbar-bg-color-dark: #333333;
+    --sidebar-bg-color-dark: #333333;
+
 
     /* Default Werte */
     --default-color: var(--primary-color-light);
@@ -46,27 +61,52 @@
     --side-drawer-width: 250px;
     --side-drawer-height: 100vh;
 
-
     /* Buttons */
-    --button-bg-color: #69ff00;
-    --button-text-color: #ffffff;
-    --button-height: 40px;
-    --button-width: 150px;
-    --button-border-radius: 5px;
-    --button-hover-bg-color: #0056b3;
-    --button-hover-text-color: #ffffff;
+    --button-height: 50px;
+    --button-width: 100px;
+    --button-border-radius: 50%;
+
+    /* Light Mode */
+    --button-bg-color: var(--primary-color);
+    --button-text-color: var(--text-color);
+    --button-hover-bg-color: var(--hover-bg-color);
+    --button-hover-text-color: var(--text-color);
+
+    /* Dark Mode */
+    --button-bg-color-dark: var(--primary-color-dark);
+    --button-text-color-dark: var(--text-color-dark);
+    --button-hover-bg-color-dark: var(--hover-bg-color-dark);
+    --button-hover-text-color-dark: var(--hover-text-color-dark);
+
+    /* create-button-fab */
+    --create-button-fab-bg-color: var(--primary-color);
+    --create-button-fab-text-color: var(--text-color);
+    --create-button-fab-hover-bg-color: var(--hover-bg-color);
+    --create-button-fab-hover-text-color: var(--hover-text-color);
+
+    /* Light Mode */
+    --create-button-fab-bg-color-light: var(--primary-color);
+    --create-button-fab-text-color-light: var(--text-color);
+    --create-button-fab-hover-bg-color-light: var(--hover-bg-color);
+    --create-button-fab-hover-text-color-light: var(--hover-text-color);
+
+    /* Dark Mode */
+    --create-button-fab-bg-color-dark: var(--primary-color-dark);
+    --create-button-fab-text-color-dark: var(--text-color-dark);
+    --create-button-fab-hover-bg-color-dark: var(--hover-bg-color-dark);
+    --create-button-fab-hover-text-color-dark: var(--hover-text-color-dark);
 
     /* Input light */
-    --input-bg-color: #ffffff;
-    --input-text-color: #333333;
-    --input-border-color: #cccccc;
-    --input-border-radius: 5px;
+    --input-bg-color-light: var(--background-color-light);
+    --input-text-color-light: var(--text-color-light);
+    --input-border-color-light: var(--border-color-light);
+    --input-border-radius-light: var(--border-radius);
 
     /* Input dark */
-    --input-bg-color-dark: #333333;
-    --input-text-color-dark: #ffffff;
-    --input-border-color-dark: #cccccc;
-    --input-border-radius-dark: 5px;
+    --input-bg-color-dark: var(--background-color-dark);
+    --input-text-color-dark: var(--text-color-dark);
+    --input-border-color-dark: var(--border-color-dark);
+    --input-border-radius-dark: var(--border-radius);
 
     /* Margin */
     --margin-small: 0.5rem;
@@ -81,53 +121,80 @@
     --padding-xlarge: 2rem;
 
     /* Container Padding */
-    --container-padding-small: 5px 5px 5px 5px;
-    --container-padding-medium: 10px 10px 10px 10px;
-    --container-padding-large: 20px 20px 20px 20px;
-    --container-padding-xlarge: 40px 40px 40px 40px;
+    --container-padding-small: 5px;
+    --container-padding-medium: 10px;
+    --container-padding-large: 20px;
+    --container-padding-xlarge: 40px;
 
     /* Chart Card Padding */
-    --chart-card-padding: 10px 10px 10px 10px;
-    --chart-card-padding-small: 5px 5px 5px 5px;
-    --chart-card-padding-medium: 10px 10px 10px 10px;
-    --chart-card-padding-large: 20px 20px 20px 20px;
-    --chart-card-padding-xlarge: 40px 40px 40px 40px;
+    --chart-card-padding: 10px;
+    --chart-card-padding-small: 5px;
+    --chart-card-padding-medium: 10px;
+    --chart-card-padding-large: 20px;
+    --chart-card-padding-xlarge: 40px;
 
     /* padding-horizontal und padding-vertical */
-    --padding-horizontal: 10%;
-    --padding-vertical: 5%;
+    --padding-horizontal-small: 2%;
+    --padding-horizontal-medium: 3%;
+    --padding-horizontal-large: 5%;
+    --padding-horizontal-xlarge: 10%;
+
+    --padding-vertical-small: 2%;
+    --padding-vertical-medium: 3%;
+    --padding-vertical-large: 5%;
+    --padding-vertical-xlarge: 10%;
 
     /* Responsive Design */
     --max-width: 100%;
     --max-height: 100%;
     --min-width: 0;
     --min-height: 0;
-    --max-container-width: 1280px;
 
+    --max-container-width: 100%;
+    --max-container-height: 100%;
 
     /* Transition */
     --transition: all 0.3s ease-in-out;
     --transition-duration: 0.3s;
     --transition-timing-function: ease-in-out;
 
-    /*Card Content*/
-    --card-content-padding: 10px;
+    /* Card */
+    --card-padding: 10px;
+    --card-padding-small: 5px;
+    --card-padding-medium: 10px;
+    --card-padding-large: 20px;
+    --card-padding-xlarge: 40px;
 
-    /* Table */
-    --table-border-color: #cccccc;
-    --table-border-radius: 5px;
+    /* Card Content */
+    --card-content-padding-small: 5px;
+    --card-content-padding-medium: 10px;
+    --card-content-padding-large: 20px;
+    --card-content-padding-xlarge: 40px;
 
     /* Border */
     --border-width: 2px;
     --border-style: solid;
     --border-radius: 5px;
 
-    /*Border Dark & Light*/
-    --border-color-dark: #ffffff;
-    --border-color-light: #000000;
+    /* Border Dark & Light */
+    --border-color-dark: var(--text-color-dark);
+    --border-color-light: var(--text-color-light);
 
+    /* Table */
+    /* Table Dark Mode*/
+    --table-bg-color-dark: var(--background-color-dark);
+    --table-text-color-dark: var(--text-color-dark);
+    --table-border-color-dark: var(--border-color-dark);
+    --table-input-text-color-dark: var(--text-color-dark);
 
-    /*Global Hover Effect*/
+    /* Table Light Mode*/
+    --table-bg-color-light: var(--background-color-light);
+    --table-text-color-light: var(--text-color-light);
+    --table-border-color-light: var(--border-color-light);
+    --table-input-text-color-light: var(--text-color-light);
+
+    /* Global Hover Effect */
+
     .global-hover-effect {
         transition: transform 0.3s ease, box-shadow 0.3s ease;
         border-radius: var(--border-radius);
@@ -154,12 +221,12 @@
 
     /* Hover Color */
     --hover-bg-color: rgba(42, 59, 70, 0.1);
-    --hover-text-color: #0056b3;
+    --hover-text-color: rgba(255, 255, 255, 0.1);
     --hover-bg-color-dark: rgba(255, 255, 255, 0.1);
     --hover-text-color-dark: #ffffff;
     --hover-bg-color-light: rgba(4, 29, 47, 0.1);
     --hover-text-color-light: rgba(255, 255, 255, 0.1);
-    --hover-error-color: #ff0000;
+    --hover-error-color: rgba(244, 67, 54, 0.1);
 }
 
 /* Globale Stile */
@@ -175,24 +242,28 @@ body {
     padding-top: var(--appbar-height);
 }
 
+.appbar {
+    z-index: var(--z-index-appbar);
+}
+
 .dark-mode {
     --background-color: var(--background-color-dark);
     --text-color: var(--text-color-dark);
-    --navbar-bg-color: var(--navbar-bg-color-dark);
-    --sidebar-bg-color: var(--sidebar-bg-color-dark);
-    --border-color: var(--border-color-dark);
-    --box-shadow: var(--box-shadow-dark);
-    --box-shadow-hover: var(--box-shadow-hover-dark);
+    --input-bg-color: var(--input-bg-color-dark);
+    --input-text-color: var(--input-text-color-dark);
+    --input-border: var(--input-border-dark);
+    --input-border-radius: var(--input-border-radius-dark);
+    --input-padding: var(--input-padding-dark);
 }
 
 .light-mode {
     --background-color: var(--background-color-light);
     --text-color: var(--text-color-light);
-    --navbar-bg-color: var(--navbar-bg-color-light);
-    --sidebar-bg-color: var(--sidebar-bg-color-light);
-    --border-color: var(--border-color-light);
-    --box-shadow: var(--box-shadow-light);
-    --box-shadow-hover: var(--box-shadow-hover-light);
+    --input-bg-color: var(--input-bg-color-light);
+    --input-text-color: var(--input-text-color-light);
+    --input-border: var(--input-border-light);
+    --input-border-radius: var(--input-border-radius-light);
+    --input-padding: var(--input-padding-light);
 }
 
 .confirm-button {
@@ -211,8 +282,6 @@ body {
     color: var(--button-hover-text-color);
 }
 
-
-
 @media (min-width: 0px) and (max-width: 480px) {
     :root {
         --font-size-large: 0.9rem;
@@ -230,7 +299,6 @@ body {
         align-items: stretch;
     }
 }
-
 
 @media (min-width: 481px) and (max-width: 767px) {
     :root {
@@ -253,7 +321,6 @@ body {
     }
 }
 
-
 @media (min-width: 768px) and (max-width: 1024px) {
     :root {
         --padding-horizontal: 3%;
@@ -271,7 +338,6 @@ body {
         justify-content: space-around;
     }
 }
-
 
 @media (min-width: 1025px) and (max-width: 1280px) {
     :root {
@@ -293,7 +359,6 @@ body {
         justify-content: space-evenly;
     }
 }
-
 
 @media (min-width: 1281px) and (max-width: 1920px) {
     :root {
