--- a/frontend/src/components/drawer/SideDrawer/SideDrawer.css
+++ b/frontend/src/components/drawer/SideDrawer/SideDrawer.css
@@ -6,13 +6,21 @@
 .side-drawer {
     height: 100%;
     width: 100%;
+    background-color: var(--background-color-dark);
+    box-shadow: 0 6px 10px rgba(255, 255, 255, 0.1);
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 200;
+    z-index: 1000;
     transform: translateX(-100%);
     transition: transform 0.3s ease-out;
 }
 
+.mini-side-drawer {
+    transform: translateX(-100%); /* Versteckt den Mini-Drawer standardmäßig */
+    transition: transform 0.3s ease-out;
+}
 
-
+.mini-side-drawer:hover {
+    transform: translateX(0); /* Zeigt den Mini-Drawer bei Hover vollständig an */
+}
