--- a/frontend/src/pages/editor/Editor.css
+++ b/frontend/src/pages/editor/Editor.css
@@ -2,14 +2,16 @@
     margin-top: var(--appbar-height);
     display: flex;
     flex-direction: column;
+
 }
 
 .editor-container {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    height: calc(100vh - var(--appbar-height));
-    width: calc(100% - 32px);
+    height: calc(98vh - var(--appbar-height));
+    left:calc(var(--side-drawer-width) + var(--margin-small));
+    overflow: hidden;
 }
 
 .editor-root.dark-mode {
@@ -22,24 +24,27 @@
     color: var(--text-color-light);
 }
 
-.editor-root.dark-mode, .editor-root.light-mode {
-    transition: background-color var(--transition-duration), color var(--transition-duration);
-}
-
 .chart-area {
     flex-grow: 1;
-    margin-bottom: 10px;
     overflow: hidden;
     border-radius: var(--border-radius);
 }
 
+.table-area.light-mode {
+    background-color: var(--background-color-light);
+    border-color: var(--border-color-light);
+    color: var(--text-color-light);
+}
+.table-area.dark-mode {
+    background-color: var(--background-color-dark);
+    border-color: var(--border-color-dark);
+    color: var(--text-color-dark);
+}
+
 .table-area {
-    display: flex;
-    max-height: 100%;
-    overflow: hidden;
+    flex-grow: 1;
+    overflow: auto;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-bottom: 10px;
 }
 
 .editor-icon-button {
